# optpp_solver

./: CMakeLists.txt  README.md  exotica_plugins.xml  package.xml
include/optpp_solver/: optpp_core.h  optpp_ik.h  optpp_traj.h  otpp_ik.h  otpp_traj.h
init/: OptppIK.in  OptppIKCG.in  OptppIKFDNewton.in  OptppIKGSS.in  OptppIKLBFGS.in  OptppIKQNewton.in  OptppMotionSolver.in  OptppTrajCG.in  OptppTrajFDNewton.in  OptppTrajGSS.in  OptppTrajLBFGS.in  OptppTrajQNewton.in
launch/: PythonPlanOptppIK.launch  PythonPlanOptppIKBounded.launch  PythonPlanOptppTraj.launch  PythonPlanOptppTrajBounded.launch
resources/: optpp_ik.xml  optpp_ik_bounded.xml  optpp_traj.xml  optpp_traj_bounded.xml
scripts/: example_optpp_ik.py  example_optpp_ik_bounded.py  example_optpp_traj.py  example_optpp_traj_bounded.py
src/: optpp_core.cpp  optpp_ik.cpp  optpp_traj.cpp
