<?xml version="1.0"?>
<package format="2">
  <name>optpp_solver</name>
  <version>0.0.0</version>
  <description>The optpp_solver package</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>exotica_core</depend>
  <depend>optpp_catkin</depend>

  <export>
    <exotica_core plugin="${prefix}/exotica_plugins.xml" />
  </export>
</package>
